2000-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSClipView.m: ([-viewFrameChanged:]) fix test for when to
	redraw entire area becaause document view is smaller than clipview.
	Suggested by  benhur@inf.UFSM.br

2000-10-19  Michael Hanni <mhanni@sprintmail.com>

	* Source/NSTabView.m: a few bugfixes.
	* Source/NSTabViewItem.m: fixed a few memory leaks.

2000-10-17  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSPageLayout.h:
	Added some ivars
	* Headers/gnustep/gui/NSPrintInfo.h:
	Prefixed ivar with underscore.
	* Source/NSPrintInfo.m:
	Change references to ivar info to _info.
	[initPrintInfoDefaults] now works if there is no PrinterAdmin
	resource. 
	* Source/NSPageLayout.m:
	Some basic implementation
	* Source/NSApplication.m:
	[runPageLayout:] use real panel.

2000-10-15  Adam Fedor  <fedor@gnu.org>

	* Source/NSWindow.m (-orderWindow:relativeTo:): Set visible flag
	immediately.
	_didDeminiaturize: New method.
	(-sendEvent:): Handle GSAppKitWindowMiniaturize an GSAppKitWindowFocusIn
	events.

2000-10-12  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/Parser/attributedStringConsumer.m
	Improved the memory handling in diverse methods.
	
Fri Oct 13 16:50:23 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Tools/GNUmakefile: Include GNUmakefile.local.service if present.

Fri Oct 13 10:48:05 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m: Prefixed ivar
	lineLayoutInformation with underscore to keep the gui to compile.

2000-10-12  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSLayoutManager.h: Added some missing
	methods and move comments to .m file.  Other clean ups.
	* Headers/gnustep/gui/NSDocumentFrameworkPrivate.h: Removed
	unneeded method _removeDocument.
	* Source/NSDocument.m: In [close] use removeDocument instead of
	_removeDocument.  [initWithContentsOfFile:ofType:] call [self
	init] instead of [super init].
	* Source/NSDocumentController.m: Use explicit Private interface.